tests/models/snapshots/can_validate_model@users.snap
---
source: tests/models/users.rs
expression: res
---
Err(
    Custom(
        "{\"email\":[{\"code\":\"email\",\"message\":\"Invalid email format.\"}],\"name\":[{\"code\":\"length\",\"message\":\"Name must be at least 2 characters long.\"}]}",
    ),
)
