tests/models/snapshots/handle_create_with_password_with_duplicate@users.snap
---
source: tests/models/users.rs
expression: new_user
---
Err(
    Message(
        "Email already registered.",
    ),
)
